[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/BackButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Options.gd" type="Script" id=2]

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="BackButton" parent="." instance=ExtResource( 1 )]

[node name="MenuButtons" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MenuButtons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -63.0
margin_top = -23.0
margin_right = 63.0
margin_bottom = 23.0

[node name="SoundButton" type="Button" parent="MenuButtons/VBoxContainer"]
pause_mode = 2
margin_right = 126.0
margin_bottom = 20.0
text = "Sound: ON"

[node name="MusicButton" type="Button" parent="MenuButtons/VBoxContainer"]
pause_mode = 2
margin_top = 24.0
margin_right = 126.0
margin_bottom = 44.0
text = "Music: ON"

[connection signal="pressed" from="MenuButtons/VBoxContainer/SoundButton" to="." method="_on_SoundButton_pressed"]
[connection signal="pressed" from="MenuButtons/VBoxContainer/MusicButton" to="." method="_on_MusicButton_pressed"]
